Java cleanup and reformat; Lisp file updates; Next, looking to rework Macros